Added link to open source code
Added link to the weather-app github repository and fixed CSS

--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
         </div>
         -->
       </div>
-      <footer>Coded by Carmen Rosales</footer>
+      <footer>
+        <a href="https://github.com/carmeneli1019/weather-app" target="blank"
+          >Open-source code</a
+        >
+        by Carmen Rosales
+      </footer>
     </div>
     <script src="src/script.js"></script>
   </body>
