Added celsius and fahrenheit link and changed styling
Minor changes to styling in the temperature section, buttons and footer

--- a/index.html
+++ b/index.html
@@ -80,16 +80,10 @@
             <h1>
               <span id="weather-icon"></span> <span id="temperature"></span>
             </h1>
-            <p class="units">
-              ºC
-              <!--
-                <a href="#" id="celsius-link">ºC</a>
-               |
-            <a href="#" id="fahrenheit-link">ºF</a>
-             -->
-            </p>
+            <a href="#" class="units">ºC |</a>
+            <a href="#" class="units">ºF</a>
             <p id="date"></p>
-            <p><small id="description"></small></p>
+            <p id="description"></p>
           </div>
 
           <div class="col">
