Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
             <h1>
               <span id="weather-icon"></span> <span id="temperature"></span>
             </h1>
-            <a href="#" class="units">ºC |</a>
-            <a href="#" class="units">ºF</a>
+            <span class="units">
+              <a href="#" id="celsius-link" class="active">ºC </a>|
+              <a href="#" id="fahrenheit-link"> ºF</a>
+            </span>
             <p id="date"></p>
             <p id="description"></p>
           </div>
