--- a/index.html
+++ b/index.html
@@ -95,43 +95,7 @@
           </div>
         </div>
 
-        <!--
-        <div class="row forecast shadow-sm">
-          <div class="col forecast-col">
-            <div class="row"><p>Wednesday</p></div>
-            <div class="row"><i class="fas fa-cloud"></i></div>
-            <div class="row"><p>15 ºC</p></div>
-          </div>
-
-          <div class="col forecast-col">
-            <div class="row"><p>Thursday</p></div>
-            <div class="row"><i class="fas fa-cloud"></i></div>
-            <div class="row"><p>17 ºC</p></div>
-          </div>
-          <div class="col forecast-col">
-            <div class="row"><p>Friday</p></div>
-            <div class="row"><i class="fas fa-cloud-showers-heavy"></i></div>
-            <div class="row"><p>16 ºC</p></div>
-          </div>
-          <div class="col forecast-col">
-            <div class="row"><p>Saturday</p></div>
-            <div class="row"><i class="fas fa-cloud-sun-rain"></i></div>
-            <div class="row"><p>15 ºC</p></div>
-          </div>
-          <div class="col forecast-col">
-            <div class="row"><p>Sunday</p></div>
-            <div class="row"><i class="fas fa-sun"></i></div>
-            <div class="row"><p>14 ºC</p></div>
-          </div>
-          <div class="col forecast-col">
-            <div class="row"><p>Monday</p></div>
-            <div class="row"><i class="fas fa-sun"></i></div>
-            <div class="row">
-              <p>16 ºC</p>
-            </div>
-          </div>
-        </div>
-        -->
+        <div class="row forecast shadow-sm" id="weather-forecast"></div>
       </div>
       <footer>
         <a href="https://github.com/carmeneli1019/weather-app" target="blank"
