Change search and location buttons

--- a/index.html
+++ b/index.html
@@ -56,17 +56,13 @@
               />
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-info shadow-sm">
-                Search
+              <button type="submit" class="btn btn-link search-button">
+                <i class="fas fa-search"></i>
               </button>
             </div>
             <div class="col-auto">
-              <button
-                id="current-button"
-                type="reset"
-                class="btn btn-success shadow-sm"
-              >
-                Current
+              <button id="current-button" type="reset" class="btn btn-link">
+                <i class="fas fa-location-arrow"></i>
               </button>
             </div>
           </div>
