Added netlify link

--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@
       </div>
       <footer>
         <a href="https://github.com/carmeneli1019/weather-app" target="blank"
-          >Open-source code</a
+          >Open-source code,
+        </a>
+        hosted on
+        <a href="https://focused-golick-1f7ca2.netlify.app/" target="blank"
+          >Netlify</a
         >
-        by Carmen Rosales
+        by Carmen Rosales 👩‍💻
       </footer>
     </div>
     <script src="src/script.js"></script>
