Changed styling in the current weather section

--- a/index.html
+++ b/index.html
@@ -73,13 +73,17 @@
         </div>
         <div class="row">
           <div class="col">
-            <h1>
-              <span id="weather-icon"></span> <span id="temperature"></span>
-            </h1>
-            <span class="units">
-              <a href="#" id="celsius-link" class="active">ºC </a>|
-              <a href="#" id="fahrenheit-link"> ºF</a>
-            </span>
+            <div class="clearfix">
+              <div class="float-left">
+                <h1>
+                  <span id="weather-icon"></span><span id="temperature"></span>
+                </h1>
+                <span class="units">
+                  <a href="#" id="celsius-link" class="active">ºC </a>|
+                  <a href="#" id="fahrenheit-link">ºF</a>
+                </span>
+              </div>
+            </div>
             <p id="date"></p>
             <p id="description"></p>
           </div>
